// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TypeaheadMultiple renderToken ui: Component: TypeaheadMultiple => renderToken => ui 1`] = `
<Tag
  className="align-self-center"
  key="1337"
  onRemove={[Function]}
  text="42"
/>
`;

exports[`Component: TypeaheadMultiple ui with value: Component: TypeaheadMultiple => ui => with value 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best friend
  </Label>
  <div
    className=""
  >
    <ForwardRef
      filterBy={[Function]}
      id="bestFriend"
      inputProps={
        Object {
          "className": "form-control",
          "value": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
          ],
        }
      }
      multiple={true}
      onChange={[Function]}
      onInputChange={[Function]}
      options={
        Array [
          Object {
            "label": "coordinator@42.nl",
            "value": Object {
              "active": false,
              "email": "coordinator@42.nl",
              "firstName": "Cordelia",
              "id": 777,
              "lastName": "Coordinator",
              "roles": Array [
                "ADMIN",
                "USER",
              ],
            },
          },
          Object {
            "label": "user@42.nl",
            "value": Object {
              "active": false,
              "email": "user@42.nl",
              "firstName": "Ulysses",
              "id": 1337,
              "lastName": "User",
              "roles": Array [
                "USER",
              ],
            },
          },
        ]
      }
      placeholder="Please provide your best friend"
      renderToken={[Function]}
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
    />
  </div>
  Some error
</FormGroup>
`;

exports[`Component: TypeaheadMultiple ui without label: Component: TypeaheadMultiple => ui => without label 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <div
    className=""
  >
    <ForwardRef
      filterBy={[Function]}
      inputProps={
        Object {
          "className": "form-control",
          "value": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
          ],
        }
      }
      multiple={true}
      onChange={[Function]}
      onInputChange={[Function]}
      options={
        Array [
          Object {
            "label": "coordinator@42.nl",
            "value": Object {
              "active": false,
              "email": "coordinator@42.nl",
              "firstName": "Cordelia",
              "id": 777,
              "lastName": "Coordinator",
              "roles": Array [
                "ADMIN",
                "USER",
              ],
            },
          },
          Object {
            "label": "user@42.nl",
            "value": Object {
              "active": false,
              "email": "user@42.nl",
              "firstName": "Ulysses",
              "id": 1337,
              "lastName": "User",
              "roles": Array [
                "USER",
              ],
            },
          },
        ]
      }
      placeholder="Please provide your best friend"
      renderToken={[Function]}
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
    />
  </div>
  Some error
</FormGroup>
`;

exports[`Component: TypeaheadMultiple ui without placeholder: Component: TypeaheadMultiple => ui => without placeholder 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best friend
  </Label>
  <div
    className=""
  >
    <ForwardRef
      filterBy={[Function]}
      id="bestFriend"
      inputProps={
        Object {
          "className": "form-control",
          "value": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
          ],
        }
      }
      multiple={true}
      onChange={[Function]}
      onInputChange={[Function]}
      options={
        Array [
          Object {
            "label": "coordinator@42.nl",
            "value": Object {
              "active": false,
              "email": "coordinator@42.nl",
              "firstName": "Cordelia",
              "id": 777,
              "lastName": "Coordinator",
              "roles": Array [
                "ADMIN",
                "USER",
              ],
            },
          },
          Object {
            "label": "user@42.nl",
            "value": Object {
              "active": false,
              "email": "user@42.nl",
              "firstName": "Ulysses",
              "id": 1337,
              "lastName": "User",
              "roles": Array [
                "USER",
              ],
            },
          },
        ]
      }
      renderToken={[Function]}
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
    />
  </div>
  Some error
</FormGroup>
`;
